--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,6 +8,25 @@ $DarkGrayishBlue: hsl(230, 11%, 40%);
 $GrayishBlue: hsl(231, 7%, 65%);
 $LightGrayishBlue: hsl(207, 33%, 95%);
 
+// variables mixins
+@mixin mobile {
+  @media (max-width: 576px) {
+    @content;
+  }
+}
+
+@mixin tablet-low {
+  @media (max-width: 768px) {
+    @content;
+  }
+}
+
+@mixin tablet {
+  @media (max-width: 991px) {
+    @content;
+  }
+}
+
 // basic code
 * {
   margin: 0;
@@ -46,6 +65,66 @@ a {
 }
 
 // hero section
+// navbar hamburger
+section.hero.hero-top.active {
+  background: #fff;
+}
+
+.hamburger {
+  display: none;
+}
+
+.bar {
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background-color: #101010;
+}
+
+@media only screen and (max-width: 991px) {
+  .nav-menu {
+    position: fixed;
+    left: -100%;
+    top: 5rem;
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    width: 100%;
+    border-radius: 10px;
+    text-align: center;
+    transition: 0.3s;
+    box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
+    z-index: 99;
+  }
+
+  .nav-menu.active {
+    left: 0;
+  }
+
+  .nav-item {
+    margin: 1.6rem 0;
+  }
+
+  .hamburger {
+    display: block;
+    cursor: pointer;
+  }
+
+  .hamburger.active .bar:nth-child(2) {
+    opacity: 0;
+  }
+
+  .hamburger.active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+  }
+
+  .hamburger.active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+  }
+}
 
 .hero {
   &::before {
@@ -69,11 +148,27 @@ a {
       justify-content: space-between;
       align-items: center;
 
+      @include tablet {
+        height: 95px;
+      }
+
+      .navbar {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 1rem 1.5rem;
+      }
+
       .logo {
         width: 30px;
         height: 30px;
-      }
 
+        @include mobile() {
+          width: 25px;
+          height: 25px;
+        }
+      }
       nav {
         ul li {
           display: inline;
@@ -101,6 +196,14 @@ a {
   position: relative;
   overflow-x: hidden;
 
+  @include tablet {
+    height: 900px;
+  }
+
+  @include mobile {
+    height: 700px;
+  }
+
   &::after {
     content: "";
     width: 100%;
@@ -110,6 +213,29 @@ a {
     position: absolute;
     right: -55%;
     top: 8%;
+
+    @include tablet {
+      width: 72%;
+      height: 45%;
+      background-repeat: no-repeat;
+      background-size: cover;
+      right: -19%;
+      top: 11%;
+      transform: translate(-26%, -15%);
+    }
+
+    @include tablet-low {
+      width: 82%;
+      right: -22%;
+    }
+
+    @include mobile {
+      width: 100%;
+      height: 37%;
+      right: 0;
+      top: 0;
+      transform: translate(0, 0);
+    }
   }
 
   .wrapper {
@@ -122,12 +248,20 @@ a {
     height: 100%;
     margin: auto;
 
+    @include tablet {
+      justify-content: flex-end;
+    }
+
     .hero-text {
       h3 {
         color: $GrayishBlue;
         text-transform: uppercase;
         font-size: 1.25rem;
         letter-spacing: 5px;
+
+        @include mobile {
+          font-size: 1rem;
+        }
 
         span {
           background-color: $VeryDarkBlue;
@@ -146,6 +280,14 @@ a {
         color: $VeryDarkBlue;
         margin: 20px 0;
         text-transform: uppercase;
+
+        @include tablet-low() {
+          font-size: 4rem;
+        }
+
+        @include mobile {
+          font-size: 2.5rem;
+        }
       }
     }
 
@@ -156,6 +298,7 @@ a {
   }
 
   .hero__btn {
+    margin-top: 30px;
     display: flex;
     align-items: center;
 
@@ -171,6 +314,12 @@ a {
       &:hover {
         background-color: rgba(255, 92, 92, 0.9);
       }
+
+      @include mobile {
+        font-size: 0.8rem;
+        letter-spacing: 1px;
+        padding: 12px 22px;
+      }
     }
 
     span {
@@ -179,6 +328,11 @@ a {
       color: $GrayishBlue;
       text-transform: uppercase;
       letter-spacing: 3px;
+
+      @include mobile {
+        font-size: 0.8rem;
+        letter-spacing: 1px;
+      }
     }
   }
 }
@@ -186,6 +340,11 @@ a {
 footer {
   display: flex;
   justify-content: center;
+  padding: 50px 0 25px;
+
+  @include mobile {
+    font-size: 0.7rem;
+  }
 }
 
 @media (max-width: 1130px) {
